--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
 					<div class="form-group">
 						<input type="text" class="form-control" placeholder="Search">
 					</div>
-					<button type="submit" class="btn btn-default">Submit</button>
+					<button type="submit" class="btn btn-default">Search</button>
 				</form>
 				<ul class="nav navbar-nav">
-					<li><a href="#" style="color: white">Link 1</a></li>
-					<li><a href="#" style="color: white">Link 2</a></li>
+					<li><a ui-sref='books' style="color: white">Books</a></li>
+					<li><a ui-sref='characters' style="color: white">Characters</a></li>
+					<li><a ui-sref='houses' style="color: white">Houses</a></li>
 				</ul>
 			</div>
 		</nav>
