--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/typeahead.css">
 
 </head>
 <body>
@@ -26,20 +27,19 @@
 			<div class="collapse navbar-collapse" uib-collapse="ctrl.isNavCollapsed">
 				<form class="navbar-form navbar-left">
 					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Search">
+						<input class='typeahead' type="text" sf-typeahead options="ctrl.exampleOptions" datasets="ctrl.numbersDataset" ng-model="ctrl.selectedNumber">
 					</div>
 					<button type="submit" class="btn btn-default">Search</button>
 				</form>
 				<ul class="nav navbar-nav">
-					<li><a ui-sref='books' style="color: white">Books</a></li>
-					<li><a ui-sref='characters' style="color: white">Characters</a></li>
-					<li><a ui-sref='houses' style="color: white">Houses</a></li>
+					<li><a ui-sref='search({ query : books })' style="color: white">Books</a></li>
+					<li><a ui-sref='search({ query : Characters })' style="color: white">Characters</a></li>
+					<li><a ui-sref='search({ query : houses })' style="color: white">Houses</a></li>
 				</ul>
 			</div>
-		</nav>
-		<div ui-view> </div>
-		
+		</nav>	
 	</div>
+	<div ui-view> </div>
 
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -49,10 +49,16 @@
 	<script type="text/javascript" src="js/angular-touch.js"></script>
 	<script type="text/javascript" src="js/ui-bootstrap-tpls-2.5.0.min.js"></script>
 	<script type="text/javascript" src="js/angular-ui-router.min.js"></script>
+	<script data-require="angular.js@1.2.x" src="http://code.angularjs.org/1.2.11/angular.js" data-semver="1.2.11"></script>
+	<script data-require="typeahead.js@*" data-semver="0.10.0" src="http://twitter.github.com/typeahead.js/releases/latest/typeahead.bundle.js"></script>
+	<script data-require="bloodhound.js@*" data-semver="0.10.0" src="http://twitter.github.com/typeahead.js/releases/latest/bloodhound.js"></script>
+	<script src="angular-typeahead.js"></script>
 	<script type="text/javascript" src="angular/app.js"></script>
 	<script type="text/javascript" src="angular/routing.js"></script>
 
 	<script type="text/javascript" src="angular/controller/nav.js"></script>
+	<script type="text/javascript" src="angular/controller/homeController.js"></script>
+	<script type="text/javascript" src="angular/controller/searchController.js"></script>
 
 </body>
 </html>
