--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<script data-require="angular.js@1.2.x" src="http://code.angularjs.org/1.2.11/angular.js" data-semver="1.2.11"></script>
 	<script data-require="typeahead.js@*" data-semver="0.10.0" src="http://twitter.github.com/typeahead.js/releases/latest/typeahead.bundle.js"></script>
 	<script data-require="bloodhound.js@*" data-semver="0.10.0" src="http://twitter.github.com/typeahead.js/releases/latest/bloodhound.js"></script>
-	<script src="angular-typeahead.js"></script>
+	<script src="js/angular-typeahead.js"></script>
 	<script type="text/javascript" src="angular/app.js"></script>
 	<script type="text/javascript" src="angular/routing.js"></script>
 
