--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
 	<script type="text/javascript" src="js/angular-touch.js"></script>
 	<script type="text/javascript" src="js/ui-bootstrap-tpls-2.5.0.min.js"></script>
 	<script type="text/javascript" src="js/angular-ui-router.min.js"></script>
-	<script data-require="angular.js@1.2.x" src="http://code.angularjs.org/1.2.11/angular.js" data-semver="1.2.11"></script>
-	<script data-require="typeahead.js@*" data-semver="0.10.0" src="http://twitter.github.com/typeahead.js/releases/latest/typeahead.bundle.js"></script>
-	<script data-require="bloodhound.js@*" data-semver="0.10.0" src="http://twitter.github.com/typeahead.js/releases/latest/bloodhound.js"></script>
+	<script src="js/typeahead.bundle.js"></script>
+	<script src="js/bloodhound.js"></script>
 	<script src="js/angular-typeahead.js"></script>
 	<script type="text/javascript" src="angular/app.js"></script>
 	<script type="text/javascript" src="angular/routing.js"></script>
