--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 	<script type="text/javascript" src="angular/app.js"></script>
 	<script type="text/javascript" src="angular/routing.js"></script>
 
+	<script type="text/javascript" src="angular/services/getdata.js"></script>
+
 	<script type="text/javascript" src="angular/controller/nav.js"></script>
 	<script type="text/javascript" src="angular/controller/homeController.js"></script>
 	<script type="text/javascript" src="angular/controller/searchController.js"></script>
