--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 	<script type="text/javascript" src="angular/controller/nav.js"></script>
 	<script type="text/javascript" src="angular/controller/homeController.js"></script>
 	<script type="text/javascript" src="angular/controller/searchController.js"></script>
+	<script type="text/javascript" src="angular/controller/typeaheadCtrl.js"></script>
 
 </body>
 </html>
