--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	<script type="text/javascript" src="js/angular-animate.js"></script>
 	<script type="text/javascript" src="js/angular-touch.js"></script>
 	<script type="text/javascript" src="js/ui-bootstrap-tpls-2.5.0.min.js"></script>
+	<script type="text/javascript" src="js/angularjs-dropdown-multiselect.min.js"></script>
 	<script type="text/javascript" src="js/angular-ui-router.min.js"></script>
 	<script type="text/javascript" src="angular/app.js"></script>
 	<script type="text/javascript" src="angular/routing.js"></script>
