--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 	<script type="text/javascript" src="angular/routing.js"></script>
 
 	<script type="text/javascript" src="angular/services/getdata.js"></script>
+	<script type="text/javascript" src="angular/services/searchgetdata.js"></script>
 
 	<script type="text/javascript" src="angular/controller/nav.js"></script>
 	<script type="text/javascript" src="angular/controller/homeController.js"></script>
