--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="js/angular.js"></script>
 	<script type="text/javascript" src="js/angular-animate.js"></script>
+	<script type="text/javascript" src="js/angular-sanitize.min.js"></script>
 	<script type="text/javascript" src="js/angular-touch.js"></script>
 	<script type="text/javascript" src="js/ui-bootstrap-tpls-2.5.0.min.js"></script>
 	<script type="text/javascript" src="js/angularjs-dropdown-multiselect.min.js"></script>
@@ -46,6 +47,7 @@
 	<script type="text/javascript" src="angular/controller/nav.js"></script>
 	<script type="text/javascript" src="angular/controller/homeController.js"></script>
 	<script type="text/javascript" src="angular/controller/searchController.js"></script>
+	<script type="text/javascript" src="angular/controller/modelController.js"></script>	
 	<script type="text/javascript" src="angular/controller/typeaheadCtrl.js"></script>
 
 </body>
