--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
 	<script type="text/javascript" src="angular/services/getdata.js"></script>
 	<script type="text/javascript" src="angular/services/searchgetdata.js"></script>
+	<script type="text/javascript" src="angular/services/fetchsingledata.js"></script>
 
 	<script type="text/javascript" src="angular/controller/nav.js"></script>
 	<script type="text/javascript" src="angular/controller/homeController.js"></script>
