--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	<script type="text/javascript" src="angular/services/fetchsingledata.js"></script>
 
 	<script type="text/javascript" src="angular/controller/nav.js"></script>
+	<script type="text/javascript" src="angular/controller/modelinitController.js"></script>
 	<script type="text/javascript" src="angular/controller/homeController.js"></script>
 	<script type="text/javascript" src="angular/controller/searchController.js"></script>
 	<script type="text/javascript" src="angular/controller/modelController.js"></script>
